fix: home explore button link and alignment

--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -10,3 +10,17 @@ mat-icon.mat-card-avatar {
   height: 36px;
   font-size: 36px;
 }
+
+.mat-card{
+  display:flex;
+  flex-direction: column;
+}
+
+.mat-card-header {
+  flex-shrink: 0;
+}
+
+.mat-card-content{
+  flex-grow: 1;
+  overflow: auto;
+}
